--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="h">Namaste WOrld</h1>
-     <button onclick="color()" id="prompt">Change Color</button> 
-    <ul></ul>
-    <script src="letAndconst.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
