--- a/dom.html
+++ b/dom.html
@@ -21,11 +21,11 @@
 <ul></ul>
 
 
-    <script  src="createAndRemoveElementInDom.js"></script>
+    <!-- <script  src="createAndRemoveElementInDom.js"></script> -->
     <script src="dom.js"></script>
-    <script>
+    <!-- <script>
         let r=document.getElementById("h2");
         console.log(r.innerHTML);
-    </script>
+    </script> -->
 </body>
 </html>
